--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,8 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/angular-restmod/dist/angular-restmod-bundle.js"></script>
+    <script src="js/rootless-ams.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -21,9 +23,14 @@
     <!-- core -->
     <script src="js/app.js"></script>
     <script src="js/routes.js"></script>
+    <script src="js/app-config.js"></script>
 
     <!-- account -->
     <script src="js/account/account.controller.js"></script>
+
+    <!-- courses -->
+    <script src="js/courses/courses.controller.js"></script>
+    <script src="js/courses/course-detail.controller.js"></script>    
 
     <!-- chats -->
     <script src="js/chats/chat-detail.controller.js"></script>
@@ -34,6 +41,12 @@
 
     <!-- services -->
     <script src="js/services/chats.js"></script>
+
+    <!-- models -->
+    <script src="js/models/course.js"></script>
+    <script src="js/models/lesson.js"></script>
+    <script src="js/models/video.js"></script>
+    <script src="js/models/document.js"></script>    
 
   </head>
   <body ng-app="app">
