Added course detail view, and the start of lesson detail

--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,9 @@
     <script src="js/courses/courses.controller.js"></script>
     <script src="js/courses/course-detail.controller.js"></script>    
 
+    <!-- lessons -->
+    <script src="js/lessons/lesson-detail.controller.js"></script>
+
     <!-- chats -->
     <script src="js/chats/chat-detail.controller.js"></script>
     <script src="js/chats/chats.controller.js"></script>
